--- a/src/stylesheets/containers/maincontainer.scss
+++ b/src/stylesheets/containers/maincontainer.scss
@@ -1,10 +1,9 @@
-.header--home {
+.container--main {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
-}
-
-.header--home__h1 {
-  margin: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: orange;
 }
