Implement base responsive ui.

--- a/src/stylesheets/components/_all.scss
+++ b/src/stylesheets/components/_all.scss
@@ -1,5 +1,9 @@
+@import 'currentForecast';
+@import 'currentTemperature';
+@import 'dailyForecast';
 @import 'forecast';
 @import 'home';
 @import 'mainSearch';
 @import 'menu';
-@import 'secondarySearch'
+@import 'secondarySearch';
+@import 'temperatures';
