--- a/src/stylesheets/components/forecast.scss
+++ b/src/stylesheets/components/forecast.scss
@@ -5,6 +5,7 @@
 
 .cityHeader {
   padding-top: 100px;
+  margin: 0px;
 }
 
 .dataContainer--current {
@@ -32,21 +33,19 @@
 }
 
 .dataDisplay--large {
-  height: 50%;
+  height: 58%;
   width: 100%;
   background-color: purple;
   position: absolute;
   bottom: 0px;
-}
-
-.dataHeader {
-
+  display: flex;
+  flex-flow: row nowrap;
 }
 
 @media all and (max-width: 1100px) {
   .dataDisplay {
     width: 30%;
-    height: 160px;
+    height: 195px;
   }
 
   .dataContainer--5day {
@@ -57,15 +56,41 @@
   }
 }
 
-@media all and (max-width: 700px) {
+@media all and (max-width: 1100px) and (orientation: landscape) {
+  .cityHeader {
+    padding-top: 75px;
+  }
+
+  .dataContainer--5day {
+    height: 52%;
+  }
+
+  .dataDisplay {
+    height: 179px;
+  }
+
+  .dataDisplay--large {
+    height: 63%;
+  }
+}
+
+@media all and (max-width: 750px) {
 
   .cityHeader {
-    font-size: 16px;
-    padding-top: 70px;
+    font-size: 23px;
+    padding-top: 114px;
   }
 
   .dataDisplay {
     width: 100%;
+    height: 25%;
+    display: flex;
+    flex-flow: row nowrap;
+  }
+
+  .dataContainer {
+    width: 98%;
+    height: 98%;
   }
 
   .dataContainer--current {
@@ -76,5 +101,28 @@
     display: flex;
     flex-flow: column;
     justify-content: space-between;
+    height: 60%;
+  }
+
+  .dataDisplay--large {
+    height: 40%;
+  }
+}
+
+@media all and (max-width: 750px) and (orientation: landscape) {
+  .cityHeader {
+    font-size: 20px;
+    padding-top: 55px;
+  }
+
+  .dataDisplay--large {
+    height: 40%;
+  }
+}
+
+@media all and (max-width: 400px) {
+  .cityHeader {
+    font-size: 20px;
+    padding-top: 100px;
   }
 }
