--- a/src/stylesheets/components/currentForecast.scss
+++ b/src/stylesheets/components/currentForecast.scss
@@ -16,6 +16,7 @@
   align-items: flex-end;
   justify-content: center;
   text-align: right;
+  font-size: 24px;
 }
 
 .briefContainer--current__header {
