--- a/src/stylesheets/components/currentTemperature.scss
+++ b/src/stylesheets/components/currentTemperature.scss
@@ -4,7 +4,7 @@
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  padding: 10px;
+  padding: 10px 10px 0px 0px;
   font-size: 18px;
 }
 
@@ -69,7 +69,7 @@
   .envContainer--current__reading {
     font-size: 16px;
     padding-right: 5px;
-    margin-bottom: 0px;
+    margin-bottom: 5px;
   }
 }
 
