fix responsiveness of main search page, menu secondary search, and display containers.

--- a/src/stylesheets/components/home.scss
+++ b/src/stylesheets/components/home.scss
@@ -3,8 +3,11 @@
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
+  padding: 0px 10px 0px 10px;
 }
 
 .header--home__h1 {
   margin: 0px;
+  font-size: 26px;
+  text-align: center;
 }
