--- a/src/stylesheets/components/dailyForecast.scss
+++ b/src/stylesheets/components/dailyForecast.scss
@@ -49,7 +49,7 @@
   }
 
   .iconContainer--daily__svg {
-    height: 38px;
+    height: 30px;
     width: 100%;
   }
 
@@ -60,7 +60,7 @@
     flex-flow: column nowrap;
     justify-content: center;
     text-align: left;
-    padding-left: 10px;
+    padding: 0px 0px 0px 10px;
   }
 
   .briefContainer--daily__dayHeader {
