--- a/src/stylesheets/components/mainSearch.scss
+++ b/src/stylesheets/components/mainSearch.scss
@@ -1,9 +1,10 @@
 .mainSearch {
   text-align: center;
+  width: 90%;
 }
 
 .mainSearch__textinput {
-  width: 350px;
+  width: 100%;
   height: 35px;
   border-radius: 4px;
   margin-top: 20px;
@@ -14,5 +15,4 @@
   width: 150px;
   margin-top: 20px;
   border-radius: 5px;
-  // border-style: none;
 }
