--- a/src/stylesheets/components/forecast.scss
+++ b/src/stylesheets/components/forecast.scss
@@ -28,14 +28,14 @@
   display: inline-block;
   height: 250px;
   width: 19%;
-  background-color: green;
-  border-color: black;
+  background-color: rgba(202, 235, 242, 0.6);
+  box-shadow: 1px 2px 5px 0px rgba(50, 50, 50, 0.5);
+  margin-bottom: 2px;
 }
 
 .dataDisplay--large {
   height: 58%;
   width: 100%;
-  background-color: purple;
   position: absolute;
   bottom: 0px;
   display: flex;
@@ -77,8 +77,7 @@
 @media all and (max-width: 750px) {
 
   .cityHeader {
-    font-size: 23px;
-    padding-top: 114px;
+    padding-top: 105px;
   }
 
   .dataDisplay {
@@ -105,7 +104,7 @@
   }
 
   .dataDisplay--large {
-    height: 40%;
+    height: 50%;
   }
 }
 
@@ -122,7 +121,7 @@
 
 @media all and (max-width: 400px) {
   .cityHeader {
-    font-size: 20px;
+    font-size: 24px;
     padding-top: 100px;
   }
 }
