--- a/src/stylesheets/components/mainSearch.scss
+++ b/src/stylesheets/components/mainSearch.scss
@@ -11,8 +11,12 @@
 }
 
 .mainSearch__submitbtn--large {
-  height: 50px;
+  height: 46px;
   width: 150px;
   margin-top: 20px;
   border-radius: 5px;
+  padding: 2px 6px;
+  background-color: rgba(138, 138, 138, 0.9);
+  color: rgb(255, 255, 255);
+  box-shadow: 1px 2px 5px 0px rgba(50, 50, 50, 0.5);
 }
