--- a/src/stylesheets/components/menu.scss
+++ b/src/stylesheets/components/menu.scss
@@ -5,7 +5,8 @@
   justify-content: space-between;
   height: 80px;
   width: 100%;
-  background-color: red;
+  background-color: rgba(0, 0, 0, 0.9);
+  box-shadow: 1px 2px 5px 0px rgba(50, 50, 50, 0.5);
   position: fixed;
   top: 0px;
   left: 0px;
@@ -37,8 +38,9 @@
 
 @media all and (max-width: 750px) {
   .menu__heading {
-    font-size: 22px;
+    font-size: 20px;
     width: 20%;
+    margin: 0px 0px 0px 20px;
   }
 
   .menu__searchWrapper {
