--- a/src/stylesheets/components/secondarySearch.scss
+++ b/src/stylesheets/components/secondarySearch.scss
@@ -6,7 +6,7 @@
 
 .secondarySearch__textinput {
   width: 250px;
-  height: 30px;
+  height: 27px;
   border-radius: 4px;
   right: -5px;
   position: relative;
@@ -21,6 +21,10 @@
   margin-right: 20px;
   position: relative;
   z-index: 1000;
+  background-color: rgba(138, 138, 138, 1);
+  color: rgb(255, 255, 255);
+  padding: 2px;
+  font-size: 14px;
 }
 
 @media all and (max-width: 550px) and (orientation: portrait) {
