--- a/src/stylesheets/containers/maincontainer.scss
+++ b/src/stylesheets/containers/maincontainer.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  background-image: url('../images/background3.jpg');
+  background-image: url('../images/background.jpg');
   background-position: center;
   background-size: cover;
 }
