--- a/src/stylesheets/components/forecast.scss
+++ b/src/stylesheets/components/forecast.scss
@@ -31,6 +31,19 @@
   background-color: rgba(202, 235, 242, 0.6);
   box-shadow: 1px 2px 5px 0px rgba(50, 50, 50, 0.5);
   margin-bottom: 2px;
+  position: relative;
+}
+
+.dataDisplay__mask {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+    &:hover {
+      background-color: rgba(100, 214, 238, 0.5);
+    }
 }
 
 .dataDisplay--large {
