Set ForecastDetail component including theme and base ui functionality.

--- a/src/stylesheets/components/_all.scss
+++ b/src/stylesheets/components/_all.scss
@@ -2,6 +2,7 @@
 @import 'currentTemperature';
 @import 'dailyForecast';
 @import 'forecast';
+@import 'ForecastDetail';
 @import 'home';
 @import 'mainSearch';
 @import 'menu';
